--- a/css/main/style.css
+++ b/css/main/style.css
@@ -34,14 +34,14 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     height: 0;
 }
 
-.header .wrap {
+.head_container .wrap {
     display: flex;
     justify-content: space-between;
     padding: 37px 10px 0;
 }
 
 .wrap {
-    max-width: 1145px;
+    max-width: 1230px;
     margin: 0 auto;
     padding: 0 10px;
 }
@@ -156,6 +156,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     justify-content: flex-start;
     background: #FFFFFF;
     border-radius: 4px;
+    margin-bottom: 60px;
 }
 
 .sorting {
@@ -178,7 +179,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-bottom: 50px;
 }
 
-.clinic-info-left {
+.clinic-card__left {
     text-align: center;
 }
 
@@ -186,30 +187,29 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     max-width: 100px;
 }
 
-.clinic-doctors {
+.clinic-card__doctors {
     margin-top: 11px;
     font-size: 19px;
     line-height: 20px;
     color: rgba(0, 0, 0, 0.5);
 }
 
-.clinic-doctors img {
+.clinic-card__doctors img {
     max-width: 18px;
     margin-right: 5px;
 }
 
-.clinic-reviews img {
+.clinic-card__reviews img {
     max-width: 20px;
 }
 
-.reviews-count {
+.clinic-card__reviews-count {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.7);
 }
 
-.percent-review {
+.clinic-card__percent-review {
     font-style: normal;
-
     line-height: 20px;
     color: rgba(0, 0, 0, 0.7);
     margin-top: 5px;
@@ -220,58 +220,58 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     line-height: 37px;
 }
 
-.clinic-info-center {
-}
-
-.photo-clinic img {
+.clinic-card__photo-clinic img {
     max-width: 60%;
 }
 
-.clinic-name {
+.clinic-card__name {
     font-size: 30px;
+    margin-bottom: 15px;
 }
 
-.clinic-type {
+.clinic-card__type {
     font-size: 18px;
+    margin-bottom: 15px;
 }
 
-.clinic-address {
+.clinic-card__address {
     font-family: 'Inter';
+    margin-bottom: 15px;
 }
 
-.clinic-text-block {
+.clinic-card__text-block {
     font-size: 14px;
     line-height: 17px;
     color: rgba(0, 0, 0, 0.5);
 }
 
 
-.clinic-schedule {
+.clinic-card__clinic-schedule {
     font-size: 16px;
     line-height: 20px;
     color: rgba(0, 0, 0, 0.5);
 }
 
 
-.clinic-metro {
+.clinic-card__metro {
     font-size: 16px;
     line-height: 20px;
     color: rgba(0, 0, 0, 0.7);
 
 }
 
-.clinic-metro-near {
+.clinic-card__metro-near {
     margin-bottom: 11px;
 }
 
-.clinic-metro-further {
+.clinic-card__metro-further {
     font-size: 14px;
     line-height: 17px;
     color: rgba(0, 0, 0, 0.5);
     margin-bottom: 23px;
 }
 
-.clinic-phone {
+.clinic-card__phone {
     margin-bottom: 42px;
     font-size: 16px;
     line-height: 20px;
@@ -324,37 +324,35 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     justify-content: flex-end;
 }
 
-.clinic-service-items {
+.services {
+    margin-bottom: 50px;
+}
+
+.service__body {
+    height: 500px;
     width: 100%;
     margin-left: 100px;
     display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
-.clinic-service-text {
+.service__title {
     text-align: center;
 }
 
-.review-clinic-text {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 30px;
-    line-height: 37px;
-    text-align: center;
-    color: #232323;
-}
-
-
-.service-name {
+.service-item {
     text-decoration-line: underline;
     width: 31.5%;
     margin: 36px 17px 5px 1px;
 }
 
-.first, .second, .third {
-    width: 33.3%;
+.service-item a {
+    color: rgba(0, 0, 0, 0.8);
 }
 
-.under-services-phone {
+
+.service__clinic-phone {
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
@@ -363,13 +361,13 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-bottom: 25px;
 }
 
-.clinic-under-services {
+.service__footer {
     display: flex;
     justify-content: space-between;
     margin-top: 50px;
 }
 
-.condition-visit {
+.service__condition-visit {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -378,11 +376,11 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.3);
 }
 
-.popular-doctor-img {
+.popular-doctor__img {
     margin-bottom: 30px;
 }
 
-.popular-doctor-img img {
+.popular-doctor__img img {
     max-width: 55%;
 }
 
@@ -390,11 +388,11 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     display: flex;
 }
 
-.doctor-name {
+.popular-doctor__doctor-name {
     margin-bottom: 10px;
 }
 
-.doctor-category {
+.popular-doctor__doctor-category {
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -403,7 +401,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-bottom: 10px;
 }
 
-.doctor-spec {
+.popular-doctor__doctor-spec {
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -412,8 +410,12 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.5);
 }
 
+.percent-review {
+    color: #000000;
+    text-decoration-line: none;
+}
 
-.doctor-address {
+.popular-doctor__doctor-address {
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -422,16 +424,13 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-bottom: 13px;
 }
 
-.doctor-phone {
+.popular-doctor__doctor-phone {
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
     line-height: 17px;
     color: rgba(0, 0, 0, 0.7);
     margin-bottom: 20px;
-}
-
-.doctor-card {
 }
 
 .rating-body {
@@ -457,17 +456,17 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     text-align: center;
 }
 
-.popular-doctor__body {
+.popular-doctor__head {
     display: flex;
 }
 
 .popular-doctor {
     padding: 17px 30px;
     width: 100%;
+    border: 1px solid #BCBCBC;
 }
 
 .popular-doctor-container {
-    border: 1px solid #BCBCBC;
     margin-right: 30px;
 }
 
@@ -501,7 +500,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 
-.review-clinic-address {
+.last-review__clinic-address {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
@@ -510,12 +509,24 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: #000000;
 }
 
-.review-clinic-name {
+.last-review__clinic-name {
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
     line-height: 17px;
     color: #000000;
+}
+
+.last-review__clinic-count-reviews {
+    margin-left: 80px;
+}
+
+.last-review__doctor-count-reviews {
+    margin-left: 80px;
+}
+
+.last-review__clinic {
+    margin: 10px 40px 0 0;
 }
 
 .review-clinic-text {
@@ -530,22 +541,33 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.5);
 }
 
-.last-review-clinic {
+.last-review {
+    margin-top: 50px;
     background: #F7EDDF;
+}
+
+.last-review__clinic-title {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 37px;
+    text-align: center;
+    color: #232323;
+    padding: 50px;
 }
 
 .review__clinics {
     display: flex;
 }
 
-.last-review-clinic_wrap {
+.last-review_wrap {
     height: 767px;
     max-width: 1145px;
     margin: 0 auto;
     padding: 0 10px;
 }
 
-.last-review-clinic__card-clinic {
+.last-review__card-clinic {
     width: 379px;
     height: 204px;
     background: #FFFFFF;
@@ -554,17 +576,17 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-right: 15px;
 }
 
-.last-review-clinic__card-clinic__photo img {
+.last-review__card-clinic__photo img {
     width: 81px;
 }
 
-.clinic-card-main {
+.last-review__clinic-card__head {
     display: flex;
     justify-content: space-between;
     margin-bottom: 5px;
 }
 
-.clinic-card-container {
+.last-review__clinic-card-container {
     padding: 17px 30px;
     width: 100%;
 }
@@ -576,28 +598,170 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.7);
 }
 
-.last-review-clinic-count img {
+.last-review__clinic-count-reviews img {
     width: 20px;
 }
 
-.last-review-clinic-count {
+.last-review__clinic-count-reviews {
     height: 25px;
 }
 
-.author-review {
+.last-review__clinic__author-review {
     font-size: 12px;
     color: rgba(0, 0, 0, 0.7);
 }
 
-.comment-head {
+.last-review__clinic__comment-head {
     font-weight: 500;
     font-size: 12px;
     color: rgba(0, 0, 0, 0.8);
 }
 
-.comment {
+.last-review__clinic__comment {
     font-size: 12px;
     color: rgba(0, 0, 0, 0.7);
+}
+
+.last-review__doctor-title {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 37px;
+    text-align: center;
+    color: #232323;
+    padding: 40px;
+}
+
+.last-review__clinic-address {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: #000000;
+}
+
+.last-review__clinic-name {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
+}
+
+.last-review__clinic-count-reviews {
+    margin-left: 80px;
+}
+
+.last-review__doctor-count-reviews {
+    margin-left: 80px;
+}
+
+.last-review__clinic {
+    margin: 10px 40px 0 0;
+}
+
+.review-clinic-text {
+    margin: 60px;
+}
+
+.review-doctor-spec {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.last-review {
+    margin-top: 50px;
+    background: #F7EDDF;
+}
+
+.last-review__clinic-title {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 37px;
+    text-align: center;
+    color: #232323;
+    padding: 50px;
+}
+
+.review__doctors {
+    display: flex;
+}
+
+.last-review_wrap {
+    height: 767px;
+    max-width: 1145px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+
+.last-review__card-doctor {
+    width: 379px;
+    height: 204px;
+    background: #FFFFFF;
+    border: 0.5px solid rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    margin-right: 15px;
+}
+
+.last-review__card-doctor__photo img {
+    width: 81px;
+}
+
+.last-review__doctor-card__head {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+.last-review__doctor-card-container {
+    padding: 17px 30px;
+    width: 100%;
+}
+
+.counts-reviews {
+    font-style: normal;
+    font-size: 12px;
+    text-decoration-line: underline;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.last-review__doctor-count-reviews img {
+    width: 20px;
+}
+
+.last-review__doctor-count-reviews {
+    height: 25px;
+}
+
+.last-review__doctor-author-review {
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.last-review__doctor-comment-head {
+    font-weight: 500;
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.8);
+}
+
+.last-review__doctor-comment {
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.last-review__doctor-title {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 37px;
+    text-align: center;
+    color: #232323;
+    padding: 40px;
 }
 
 .first-question {
@@ -649,13 +813,9 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.8);
 }
 
-
-.footer {
-    height: 896px;
+.footer__container{
+    height: 800px;
     background: #F7EDDF;
-}
-
-.footer-main {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -663,14 +823,13 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     padding: 80px;
 }
 
-.clinic-about {
+.footer__body {
     width: 100%;
     display: flex;
-    min-height: 100%;
     padding: 80px calc(3% + 15px);
 }
 
-.name-clinics-footer {
+.footer__head {
     font-style: normal;
     font-weight: 600;
     font-size: 32px;
@@ -678,7 +837,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: #232323;
 }
 
-.head-block {
+.footer__about-clinic-head {
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
@@ -715,19 +874,19 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-bottom: 15px;
 }
 
-.first-block {
+.footer__about-clinic {
     width: 25%;
 }
 
-.second-block {
+.footer__for-patient {
     width: 25%;
 }
 
-.third-block {
+.footer__reference {
     width: 25%;
 }
 
-.fourth-block {
+.footer__technical-info {
     width: 25%;
 }
 
@@ -749,8 +908,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     text-decoration: none;
 }
 
-.left-content-footer {
-}
 
 .phone-footer {
     font-style: normal;
@@ -801,10 +958,15 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.44);
 }
 
-.under-clinic-about {
+.footer__communication {
     display: flex;
     justify-content: space-between;
 }
+
+
+
+
+
 
 
 .modal_window {
