--- a/css/doctor/style.css
+++ b/css/doctor/style.css
@@ -76,10 +76,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: white;
 }
 
-.items {
-    margin-bottom: 30px;
-}
-
 .menu-item {
     box-sizing: border-box;
     width: 117px;
@@ -147,6 +143,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     justify-content: flex-start;
     background: #FFFFFF;
     border-radius: 4px;
+    margin-bottom: 30px;
 }
 
 .sorting {
@@ -159,21 +156,18 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-right: 15px;
 }
 
-
-
-
 .doctor-card {
     display: flex;
     justify-content: space-between;
     margin-bottom: 50px;
 }
 
-.doctor-info-left {
+.doctor-card__left {
     text-align: center;
     margin-right: 30px;
 }
 
-.doctor-info-center {
+.doctor-card__center {
     margin-right: 30px;
 }
 
@@ -182,7 +176,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-bottom: 15px;
 }
 
-.doctor-reviews img {
+.doctor-card__doctor-reviews img {
     max-width: 20px;
 }
 
@@ -194,14 +188,14 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-top: 5px;
 }
 
-.doctor-name {
+.doctor-card__doctor-name {
     font-style: normal;
     font-weight: 500;
     font-size: 30px;
     color: #000000;
 }
 
-.doctor-category {
+.doctor-card__doctor-category {
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -209,7 +203,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.6);
 }
 
-.doctor-spec {
+.doctor-card__doctor-spec {
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
@@ -217,11 +211,11 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.8);
 }
 
-.doctor-experience {
+.doctor-card__doctor-experience {
     color: #FF6472;
 }
 
-.doctor-clinics_active {
+.doctor-card__doctor-clinics_active {
     width: 552px;
     height: 174px;
     background: rgba(255, 240, 75, 0.15);
@@ -230,29 +224,29 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-bottom: 20px;
 }
 
-.doctor_clinic-name span {
+.doctor-card__doctor_clinic-name span {
     font-size: 20px;
 }
 
 
-.doctor_clinic-items {
+.doctor-card__doctor_clinic-items {
     padding: 10px;
 }
 
-.doctor_clinic-name {
+.doctor-card__doctor_clinic-name {
     font-style: normal;
     font-weight: 400;
 }
 
-.clinic-schedule {
+.doctor-card__clinic-schedule {
     color: rgba(0, 0, 0, 0.5);
 }
 
-.clinic-metro-further {
+.doctor-card__clinic-metro-further {
     color: rgba(0, 0, 0, 0.5);
 }
 
-.doctor-clinics {
+.doctor-card__doctor-clinics {
     background: rgba(217, 217, 217, 0.15);
     border-radius: 4px;
     width: 552px;
@@ -262,11 +256,11 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     justify-content: space-between;
 }
 
-.doctor-clinics span {
+.doctor-card__doctor-clinics span {
     font-size: 20px;
 }
 
-.doctor-date {
+.doctor-card__doctor-date {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -276,13 +270,13 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     height: 58px;
 }
 
-.doctor-date span {
+.doctor-card__doctor-date span {
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
 }
 
-.clinic-active {
+.doctor-card__clinic-active {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -292,12 +286,12 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     height: 58px;
 }
 
-.clinic-active span {
+.doctor-card__clinic-active span {
     font-weight: 300;
     font-size: 16px;
 }
 
-.clinic-free-time-container {
+.doctor-card__clinic-free-time-container {
     display: flex;
     align-items: flex-start;
     flex-wrap: wrap;
@@ -316,8 +310,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 
-
-.clinic-phone {
+.doctor-card__clinic-phone {
     text-align: center;
     font-style: normal;
     font-weight: 600;
@@ -325,7 +318,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.7);
 }
 
-.doctor-registration {
+.doctor-card__doctor-registration {
     display: flex;
     justify-content: center;
     margin-bottom: 15px;
@@ -381,29 +374,35 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     text-decoration-line: none;
 }
 
-.clinic-service-text {
-    text-align: center;
+.services {
+    margin-bottom: 50px;
 }
 
-
-.clinic-service-items {
+.service__body {
+    height: 500px;
     width: 100%;
     margin-left: 100px;
     display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
-.service-name {
+.service__title {
+    text-align: center;
+}
+
+.service-item {
     text-decoration-line: underline;
     width: 31.5%;
     margin: 36px 17px 5px 1px;
 }
 
-.first, .second, .third {
-    width: 33.3%;
+.service-item a {
+    color: rgba(0, 0, 0, 0.8);
 }
 
 
-.under-services-phone {
+.service__clinic-phone {
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
@@ -412,13 +411,13 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-bottom: 25px;
 }
 
-.clinic-under-services {
+.service__footer {
     display: flex;
     justify-content: space-between;
     margin-top: 50px;
 }
 
-.condition-visit {
+.service__condition-visit {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -427,64 +426,17 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.3);
 }
 
-
-
-.last-review-clinic {
-    background: #F7EDDF;
-    height: 500px;
-}
-
-.review__clinics {
-    display: flex;
-}
-
-.last-review-clinic_wrap {
-    height: 767px;
-    max-width: 1145px;
-    margin: 0 auto;
-    padding: 0 10px;
-}
-
-.last-review-clinic__card-clinic {
-    width: 379px;
-    height: 204px;
-    background: #FFFFFF;
-    border: 0.5px solid rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    margin-right: 15px;
-}
-
-.last-review-clinic__card-clinic__photo img {
-    width: 81px;
-}
-
-
-.last-review-clinic-count img {
-    width: 20px;
-}
-
-.last-review-clinic-count {
-    height: 25px;
-}
-
-.author-review {
-    font-size: 12px;
-    color: rgba(0, 0, 0, 0.7);
-}
-
-.comment-head {
+.last-review__doctor-title {
+    font-style: normal;
     font-weight: 500;
-    font-size: 12px;
-    color: rgba(0, 0, 0, 0.8);
+    font-size: 30px;
+    line-height: 37px;
+    text-align: center;
+    color: #232323;
+    padding: 40px;
 }
 
-.comment {
-    font-size: 12px;
-    color: rgba(0, 0, 0, 0.7);
-}
-
-
-.review-clinic-address {
+.last-review__clinic-address {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
@@ -493,12 +445,24 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: #000000;
 }
 
-.review-clinic-name {
+.last-review__clinic-name {
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
     line-height: 17px;
     color: #000000;
+}
+
+.last-review__clinic-count-reviews {
+    margin-left: 80px;
+}
+
+.last-review__doctor-count-reviews {
+    margin-left: 80px;
+}
+
+.last-review__clinic {
+    margin: 10px 40px 0 0;
 }
 
 .review-clinic-text {
@@ -513,6 +477,96 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.5);
 }
 
+.last-review {
+    margin-top: 50px;
+    background: #F7EDDF;
+}
+
+.last-review__clinic-title {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 37px;
+    text-align: center;
+    color: #232323;
+    padding: 50px;
+}
+
+.review__doctors {
+    display: flex;
+}
+
+.last-review_wrap {
+    height: 450px;
+    max-width: 1145px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+
+.last-review__card-doctor {
+    width: 379px;
+    height: 204px;
+    background: #FFFFFF;
+    border: 0.5px solid rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    margin-right: 15px;
+}
+
+.last-review__card-doctor__photo img {
+    width: 81px;
+}
+
+.last-review__doctor-card__head {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+.last-review__doctor-card-container {
+    padding: 17px 30px;
+    width: 100%;
+}
+
+.counts-reviews {
+    font-style: normal;
+    font-size: 12px;
+    text-decoration-line: underline;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.last-review__doctor-count-reviews img {
+    width: 20px;
+}
+
+.last-review__doctor-count-reviews {
+    height: 25px;
+}
+
+.last-review__doctor-author-review {
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.last-review__doctor-comment-head {
+    font-weight: 500;
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.8);
+}
+
+.last-review__doctor-comment {
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.last-review__doctor-title {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 37px;
+    text-align: center;
+    color: #232323;
+    padding: 40px;
+}
 .clinic-card-main {
     display: flex;
     justify-content: space-between;
@@ -577,8 +631,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 
-
-
 .btn_records {
     background: #FFF04B;
     border-radius: 4px;
@@ -600,43 +652,28 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 
-
-
-.footer {
-    height: 896px;
+.footer__container{
+    height: 800px;
     background: #F7EDDF;
-}
-
-.footer-main {
     width: 100%;
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    padding: 80px;
+    padding: 80px 300px;
 }
 
-.clinic-about {
+.footer__body {
     width: 100%;
     display: flex;
-    min-height: 100%;
     padding: 80px calc(3% + 15px);
 }
 
-.name-clinics-footer {
+.footer__head {
     font-style: normal;
     font-weight: 600;
     font-size: 32px;
     line-height: 39px;
     color: #232323;
-}
-
-.head-block {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 22px;
-    color: rgba(0, 0, 0, 0.8);
-    margin-bottom: 25px;
 }
 
 .mail-footer a {
@@ -667,19 +704,19 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-bottom: 15px;
 }
 
-.first-block {
+.footer__about-clinic {
     width: 25%;
 }
 
-.second-block {
+.footer__for-patient {
     width: 25%;
 }
 
-.third-block {
+.footer__reference {
     width: 25%;
 }
 
-.fourth-block {
+.footer__technical-info {
     width: 25%;
 }
 
@@ -701,8 +738,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     text-decoration: none;
 }
 
-.left-content-footer {
-}
 
 .phone-footer {
     font-style: normal;
@@ -753,7 +788,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.44);
 }
 
-.under-clinic-about {
+.footer__communication {
     display: flex;
     justify-content: space-between;
 }
